# python-project-83

./: .coverage  .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml
.github/workflows/: lint.yml  sonar.yml
hexlet_code.egg-info/: PKG-INFO  requires.txt
page_analyzer/: __init__.py  app.py  db.py  parser.py  url_normalizer.py
page_analyzer/templates/: base.html  index.html  url.html  urls.html
templates/: base.html  index.html
