[project]
name = "hexlet-code"
version = "0.1.0"
description = "Hexlet Python Project"
requires-python = ">=3.10"
dependencies = [
    "flask",
    "gunicorn",
    "python-dotenv"
]

[tool.ruff]
line-length = 88
select = ["E", "F"]
exclude = ["venv", ".venv"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
