[project]
name = "hexlet-code"
version = "0.1.0"
description = "Hexlet Python Project"
requires-python = ">=3.10"
dependencies = [
    "flask",
    "gunicorn",
    "python-dotenv"
]

[tool.ruff.lint]
line-length = 88
select = ["E", "F"]
exclude = ["venv", ".venv"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry.dependencies]
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
validators = "^0.20.0"
